tests/pass/use_io_print.lum
use io
print("hello")
println("world")
