tests/fail/wrong_arity.lum
use io

print("Hello", 2)